--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: dartmotion
 description: A demonstration game to demonstrate device orientation using Dart.
-version: 0.1.0
+version: 0.2.0
 homepage: https://github.com/nkratzke/dartmotion
 author: Nane Kratzke <nane.kratzke@fh-luebeck.de>
 
 environment:
   sdk: '>=1.20.1 <2.0.0'
 
-#dependencies:
-#  path: ^1.4.1
+dependencies:
+  pwa: '>=0.1.2 < 0.2.0'
 
 dev_dependencies:
   browser: ^0.10.0
