--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dartmotion
 description: A demonstration game to demonstrate device orientation using Dart.
-version: 0.3.0
+version: 0.3.1
 homepage: https://github.com/nkratzke/dartmotion
 author: Nane Kratzke <nane.kratzke@th-luebeck.de>
 
@@ -8,9 +8,8 @@ environment:
   sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
-  pwa: '>=0.1.2'
+  pwa: '>=0.1.2 <0.3.0'
 
 dev_dependencies:
-  build_runner: ^1.1.2
-  build_test: ^0.10.3
-  build_web_compilers: ^1.0.0
+  build_runner: ">=1.6.2 <2.0.0"
+  build_web_compilers: ">=1.2.0 <3.0.0"
